--- a/index.html
+++ b/index.html
@@ -216,6 +216,9 @@
                   <a href="https://www.facebook.com/" target="_blank" aria-label="share us on facebook">
                      <i class="fa-brands fa-facebook-f"></i>
                   </a>
+                  <a href="https://www.facebook.com/" target="_blank" aria-label="share us on facebook">
+                     <i class="fa-brands fa-behance-f"></i>
+                  </a>
                   <!-- <a href="https://www.twitter.com/" target="_blank" aria-label="share us on twitter">
                      <i class="fa-brands fa-twitter"></i>
                   </a> -->
@@ -276,7 +279,7 @@
                   <img src="assets/images/star.png" alt="Image" class="star">
                   <div class="banner-left-text banner-social-text d-none d-md-flex">
                      <a href="mailto:info@alaginfotech.com">mail : info@alaginfotech.com</a>
-                     <a href="tel:+91 81560 51761">Call :+91 81560 51761</a>
+                     <a href="tel:+91 8160356835">Call :+91 8160356835</a>
                   </div>
                   <div class="banner-right-text banner-social-text d-none d-md-flex">
                      <a href="https://www.instagram.com/" target="_blank">
@@ -1291,7 +1294,7 @@
                               </a>
                               <a href="tel:+91 81560 51761">
                                  <i class="fa-sharp fa-solid fa-phone-volume"></i>
-                                 +91 81560 51761                              </a>
+                                 +91 81603 56835                              </a>
                               <a href="mailto:info@alaginfotech.com">
                                  <i class="fa-sharp fa-solid fa-envelope"></i>
                                  info@alaginfotech.com
@@ -1315,10 +1318,10 @@
                                  <li>
                                     <a href="client-feedback.html">Award Winning</a>
                                  </li>
-                                 <li>
+                                 <!-- <li>
                                     <a href="blog.html">News & Blog</a>
                                  </li>
-                                 <li>
+                                 <li> -->
                                     <a href="contact-us.html">careers</a>
                                  </li>
                               </ul>
