--- a/index-five-light.html
+++ b/index-five-light.html
@@ -267,8 +267,8 @@
                   <a href="https://www.facebook.com/" target="_blank" aria-label="share us on facebook">
                      <i class="fa-brands fa-facebook-f"></i>
                   </a>
-                  <a href="https://www.twitter.com/" target="_blank" aria-label="share us on twitter">
-                     <i class="fa-brands fa-twitter"></i>
+                  <a href="https://www.x.com/" target="_blank" aria-label="share us on x">
+                     <i class="fa-brands fa-x"></i>
                   </a>
                   <a href="https://www.pinterest.com/" target="_blank" aria-label="share us on pinterest">
                      <i class="fa-brands fa-linkedin-in"></i>
@@ -636,8 +636,8 @@
                               </a>
                            </li>
                            <li>
-                              <a href="https://www.twitter.com/" target="_blank">
-                                 Twitter
+                              <a href="https://www.x.com/" target="_blank">
+                                 x
                               </a>
                            </li>
                            <li>
