--- a/index-three.html
+++ b/index-three.html
@@ -234,8 +234,8 @@ info@alaginfotech.com
                   <a href="https://www.facebook.com/" target="_blank" aria-label="share us on facebook">
                      <i class="fa-brands fa-facebook-f"></i>
                   </a>
-                  <a href="https://www.twitter.com/" target="_blank" aria-label="share us on twitter">
-                     <i class="fa-brands fa-twitter"></i>
+                  <a href="https://www.x.com/" target="_blank" aria-label="share us on x">
+                     <i class="fa-brands fa-x"></i>
                   </a>
                   <a href="https://www.pinterest.com/" target="_blank" aria-label="share us on pinterest">
                      <i class="fa-brands fa-linkedin-in"></i>
@@ -332,8 +332,8 @@ info@alaginfotech.com
                      <a href="https://www.facebook.com/" target="_blank">
                         <i class="fa-brands fa-facebook-f"></i>
                      </a>
-                     <a href="https://www.twitter.com/" target="_blank">
-                        <i class="fa-brands fa-twitter"></i>
+                     <a href="https://www.x.com/" target="_blank">
+                        <i class="fa-brands fa-x"></i>
                      </a>
                      <a href="https://www.pinterest.com/" target="_blank">
                         <i class="fa-brands fa-linkedin-in"></i>
